--- a/index.html
+++ b/index.html
@@ -14,3 +14,23 @@
     <script src="script.js"></script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gorilla Escape - Start Screen</title>
+    
+    <script type="importmap">
+    {
+      "imports": {
+        "three": "https://cdn.jsdelivr.net/npm/three@0.166/build/three.module.js",
+        "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.166/examples/jsm/"
+      }
+    }
+    </script>
+    
+</head>
+<body>
+</body>
+</html>
